feat: massive functionality overhaul

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <div class="header">
-      <h1>todo app</h1>
-      <button class="add-list">+</button>
+      <h1>Todo App</h1>
+      <button class="add-list">+ New List</button>
     </div>
     <div class="lists"></div>
+    <dialog>
+      <p>Some shit</p>
+    </dialog>
   </body>
 </html>
