--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="index.js" defer></script>
+    <script src="index.js" type="module"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="header">
       <h1>Todo App</h1>
-      <button class="add-list">+ New List</button>
+      <button class="add-list">+ New Section</button>
     </div>
     <div class="lists"></div>
-    <dialog>
+    <dialog class="">
       <p>Some shit</p>
     </dialog>
   </body>
