feat: getting there...

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
   <body>
     <div class="header">
       <h1>Todo App</h1>
-      <button class="add-list">+ New Section</button>
     </div>
-    <div class="lists"></div>
-    <dialog class="">
-      <p>Some shit</p>
-    </dialog>
+    <div class="container"></div>
+    <dialog class="details"></dialog>
   </body>
 </html>
